# Ygg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_terrain.gltf
.github/workflows/: build-test.yml
Core/: CMakeLists.txt
Core/include/Core/: Asset.hpp  Buffer.hpp  Logger.hpp  Macro.hpp  Math.hpp  Profiler.hpp  SmartPointers.hpp  UUID.hpp
Core/include/Render/: Mesh.hpp  Scene.hpp
Core/src/: Logger.cpp  Mesh.cpp  Scene.cpp  UUID.cpp
Libs/: CMakeLists.txt
Libs/glad/: CMakeLists.txt
Meior/: CMakeLists.txt
Meior/include/Meior/: Application.hpp  ImGuiLib.hpp  Macro.hpp  Renderer.hpp
Meior/include/Meior/Panels/: Panel.hpp  TerrainPanel.hpp  TreePanel.hpp
Meior/include/Meior/Renderer/: Buffer.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp  Window.hpp
Meior/src/: Application.cpp  ImGuiLib.cpp  Panel.cpp  Renderer.cpp  main.cpp
Meior/src/Panels/: Panel.cpp  TerrainPanel.cpp  TreePanel.cpp
Meior/src/Renderer/: Buffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  Window.cpp
Test/: CMakeLists.txt  TerrainGenerator.cc  lsys_test.cc
Ygg/: CMakeLists.txt
Ygg/include/: TerrainGenerator.hpp
Ygg/include/YggCpp/: LSys.hpp
Ygg/src/: LSys.cpp  TerrainGenerator.cpp  TerrainGenerator.h  Tree.cpp  Tree.hpp  TreeGenerator.cpp  TreeGenerator.hpp
Ygg/src/Core/: Logger.cpp
cmake/: pch.h.in
scripts/: build.sh
